added working redirector, working chat, added log in

--- a/index.html
+++ b/index.html
@@ -1,34 +1,27 @@
+<!DOCTYPE html>
 <html>
   <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title> Room </title>
-  
-      <!-- update the version number as needed -->
-      <script defer src="/__/firebase/5.0.4/firebase-app.js"></script>
-      <!-- include only the Firebase features as you need -->
-      <!-- <script defer src="/__/firebase/5.0.4/firebase-auth.js"></script> -->
-      <script defer src="/__/firebase/5.0.4/firebase-database.js"></script>
-      <!-- <script defer src="/__/firebase/5.0.4/firebase-messaging.js"></script> -->
-      <!-- <script defer src="/__/firebase/5.0.4/firebase-storage.js"></script> -->
-      <!-- initialize the SDK after all desired features are loaded -->
-      <script defer src="/__/firebase/init.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
-      <script>  
-        var config = {
-          apiKey: "AIzaSyC_ja4BLA-MpOBYWGdOY52XdJ0No7fWE7E",
-          authDomain: "sumyachat.firebaseapp.com",
-          databaseURL: "https://sumyachat.firebaseio.com",
-          projectId: "sumyachat",
-          storageBucket: "sumyachat.appspot.com",
-          messagingSenderId: "1088077260110"
-        };
-        firebase.initializeApp(config);
-      </script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Room </title>
+
+    <!-- update the version number as needed -->
+    <script defer src="/__/firebase/5.0.4/firebase-app.js"></script>
+    <!-- include only the Firebase features as you need -->
+    <!-- <script defer src="/__/firebase/5.0.4/firebase-auth.js"></script> -->
+    <script defer src="/__/firebase/5.0.4/firebase-database.js"></script>
+    <!-- <script defer src="/__/firebase/5.0.4/firebase-messaging.js"></script> -->
+    <!-- <script defer src="/__/firebase/5.0.4/firebase-storage.js"></script> -->
+    <!-- initialize the SDK after all desired features are loaded -->
+    <script defer src="/__/firebase/init.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
+
     <link rel="stylesheet" href="loginstyle.css">
     <script src="login.js"></script>
+    
   </head>
   <body>
+
     <label for="uname"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="uname" id="uname" required>
 
