added logout button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="login.js"></script>
     
   </head>
-  <body>
+  <body onload="checkLogedIn()">
 
     <label for="uname"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="uname" id="uname" required>
