added check username exists

--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
     <body>
         <p>Username</p>
         <input id="uName" type="text" placeholder="Enter Username">
-        <p id="uNameError"></p>
+        <div id="uNameError" style="display: none" >Username Exists</div>
 
         <p>Password</p>
         <input id="psw" type="password" placeholder="Enter Password">
