--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
         <p>Repeat Password</p>
         <input id="rPsw" type="password" placeholder="Repeat Password">
         <div id="pswError" style="display: none" >Password doesn't match</div>
-        <button onclick="signup()">Sign up</button>
+        <button onclick="signup()" id="btn">Sign up</button>
         <button onclick="cancel()">Cancel</button>
 
         <script src="signup.js"></script>
