--- a/signup.html
+++ b/signup.html
@@ -20,14 +20,14 @@
     
     </head>
     <body>
-        <p>Username</p>
+        <p class="text">Username</p>
         <input id="uName" type="text" placeholder="Enter Username">
         <div id="uNameError" style="display: none" >Username Exists</div>
 
-        <p>Password</p>
+        <p class="text">Password</p>
         <input id="psw" type="password" placeholder="Enter Password">
         
-        <p>Repeat Password</p>
+        <p class="text">Repeat Password</p>
         <input id="rPsw" type="password" placeholder="Repeat Password">
         <div id="pswError" style="display: none" >Password doesn't match</div>
         <button onclick="signup()" id="btn">Sign up</button>
