now uses firebase authentication to login or sign up

--- a/chat.html
+++ b/chat.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="chatstyle.css">
     
   </head>
-  <body onload="checkLogedIn()">
+  <body>
     <div id="title">your are loged in as 
       <b id="uName"></b>
     </div>
@@ -35,9 +35,8 @@
 
     </div>
 
-    
-
     <button id="logoutBtn" class="btn" onclick="logout()">log out</button>
-    <script src="chat.js"></script>  
+    <script src="app.js"></script>
+    <script src="chat.js"></script> 
   </body>
 </html>
